# pakipaki_model01

./: .gitignore  main.py  pst.obs_data.nans.csv  pyproject.toml
data/: basement_z.tif  confining_area.qmd  confining_area.shp  confining_area.shx  model2_chd.shp  model2_chd.shx  model2_dem.tif.aux.xml  model2_domain.qmd  model2_domain.shp  model2_domain.shx  model2_drains.dbf  model2_drains.qmd  model2_drains.shp  model2_drains.shx  model2_influx.dbf  model2_influx.shp  model2_influx.shx  model2_limestone_inactive_bottom.dbf  model2_limestone_inactive_bottom.shp  model2_limestone_inactive_bottom.shx  model2_mbr.dbf  model2_mbr.shp  model2_mbr.shx  model2_outflux.dbf  model2_outflux.shp  model2_outflux.shx  sample_locations.dbf  sample_locations.shx  spring.dbf  spring.shp  spring.shx
manual_builds/: a_setup.py  d_parameterization.py  e1_local_sen copy.ipynb  e1_local_sen.ipynb  mp7_utils.py
manual_builds/dvc_scripts/: a_model_setup.py  d_pest_local_sen.py  setup.py  utils_pest.py
manual_builds/scripts/dvc_scripts/: pest_mc_14404.err  pest_mc_14404.out  utils.py  (+2 more)
manual_builds/ss/: model_build.py
manual_builds/truth/: initial_values.xlsx  obs_results.csv
models/local2/: .gitignore
notebooks/: obs_variance.ipynb
scripts/: a_model_setup.py  c_parameterization.py  d_pest_GLM.py  e_pest_MC.py  helpers.py  setup.py  utils.py
scripts/dvc_scripts/: README_PEST_MC.md  c_parameterization.py  check_requirements.py  e_pest_MC.py  run_pest_mc.sh
scripts/ss/: b_model_setup.py  c_mp7_setups.py  e_pest.py  helpers.py  utils_pest.py
truth/: cum.csv  obs_results.csv
(+327 files in other folders)
